[package]
name = "hurB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = "0.12.1"
tensorflow = { version = "0.20.0", features = ["eager"] }
nokhwa = { version = "0.10.3", features = ["input-native"] }

